# VulkanTraining

./: .gitignore  CMakeLists.txt  README.md
Scripts/BuildScripts/Windows/: build.ps1
Scripts/LaunchScripts/Windows/: StartVulcanTraining.ps1
Scripts/SetupScripts/Windows/: setup_env.ps1
Source/main/: CMakeLists.txt  main.cpp
